<resources>
    <string name="app_name">hw_8button</string>
    <string name="LifeCycle">LifeCycle</string>
    <string name="ScrollView">ScrollVIew</string>
    <string name="text_btAdd">Add TextView</string>
    <string name="WebView">WebView</string>
    <string name="RatingBar">RatingBar</string>
    <string name="SeekBar">SeekBar</string>
    <string name="ConpoundButton">ConpoundButton</string>
    <string name="Menus">Menus</string>
    <string name="Spinner">Spinner</string>
    <string name="text_tvText1">Please give your review for this book.</string>
    <string name="text_tvText2">Android</string>
    <string name="text_place">Taipei station</string>
    <string name="text_rbFemale">female</string>
    <string name="text_rbMale">male</string>
    <string name="textOn_tbVibrateOn">vibrate on</string>
    <string name="textOff_tbVibrateOff">vibrate off</string>
    <string name="swWifi">WiFi</string>
    <string name="textOn_swWifiOn">on</string>
    <string name="textOff_swWifiOff">off</string>
    <string name="checked">checked</string>
    <string name="unchecked">unchecked</string>
    <string name="yangmingshan">Yangmingshan National Park</string>
    <string name="yushan">Yushan National Park</string>
    <string name="taroko">Taroko National Park</string>
    <string name="myloc">My Location</string>
    <string name="exit">Exit</string>
    <string name="text_tvTitle">Press menu button (on the upper right corner)</string>
    <string name="guide">Guide</string>
    <string name="traffic">Traffic</string>
    <string name="clear">Clear</string>
    <string name="background">Change Background Color</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="cyan">Cyan</string>
    <string name="text_btDelete">Delete</string>
    <string name="deleteItem">Delete Selected Item</string>
    <string name="deleteAll">Delete All the Items</string>
    <string name="text_tvFood">Your favorite food</string>
    <string-array name="food_array">
        <item>spaghetti</item>
        <item>dumpling</item>
        <item>sushi</item>
    </string-array>
    <string name="text_tvPlace">Your favorite place</string>
    <string name="text_NothingSelected">Nothing selected!</string>
    <string name="finish">Finsh</string>
</resources>
